[package]
authors = ["Charlie Maddex <charlie@maddex.co>"]
description = "Discover Log4Shell vulnerability [CVE-2021-45105]"
name = "log4j"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/name/log4j"

[dependencies]
anyhow = "1.0.51"
clap = "2.34.0"
env_logger = "0.9.0"
log = "0.4.14"
walkdir = "2.3.2"
zip = "0.5.13"